Added upstream inclusion of language models for automatic language detection. Modified Main classes for the GUI and command-line interfaces to load the additional language profiles from the resource directories at runtime.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -450,6 +450,8 @@
 	<copy file="${resource.dir}/disambiguation.xsd" todir="${dist.dir}/resource" />
 	<copy file="${resource.dir}/segment.srx" todir="${dist.dir}/resource" />
 
+    <copy file="${resource.dir}/be/be.ngp" todir="${dist.dir}/resource/be" />
+
 	<copy file="${resource.dir}/en/tagset.txt" todir="${dist.dir}/resource/en" />
 	<copy file="${resource.dir}/en/english.dict" todir="${dist.dir}/resource/en" />
 	<copy file="${resource.dir}/en/english.info" todir="${dist.dir}/resource/en" />
@@ -461,6 +463,7 @@
 	<copy file="${resource.dir}/en/macro_expansions.txt" todir="${dist.dir}/resource/en" />
 
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
+    <copy file="${resource.dir}/eo/eo.ngp" todir="${dist.dir}/resource/eo" />
 
 	<copy file="${resource.dir}/it/italian.dict" todir="${dist.dir}/resource/it" />
 	<copy file="${resource.dir}/it/italian.info" todir="${dist.dir}/resource/it" />
@@ -476,6 +479,7 @@
 	<copy file="${resource.dir}/gl/galician.dict" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/galician.info" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/README" todir="${dist.dir}/resource/gl" />
+    <copy file="${resource.dir}/gl/gl.ngp" todir="${dist.dir}/resource/gl" />
 
 	<copy file="${resource.dir}/es/spanish.dict" todir="${dist.dir}/resource/es" />
 	<copy file="${resource.dir}/es/spanish.info" todir="${dist.dir}/resource/es" />
@@ -517,6 +521,7 @@
 	<copy file="${resource.dir}/sv/compounds.txt" todir="${dist.dir}/resource/sv" />
 
 	<copy file="${resource.dir}/uk/ukrainian.dict" todir="${dist.dir}/resource/uk" />
+    <copy file="${resource.dir}/uk/uk.ngp" todir="${dist.dir}/resource/uk" />
 
 	<copy file="${resource.dir}/ru/russian.dict" todir="${dist.dir}/resource/ru" />
 	<copy file="${resource.dir}/ru/russian.info" todir="${dist.dir}/resource/ru" />
@@ -534,6 +539,9 @@
 	<copy file="${resource.dir}/ro/romanian_tags.txt" todir="${dist.dir}/resource/ro" />
 	<copy file="${resource.dir}/ro/disambiguation.xml" todir="${dist.dir}/resource/ro" />
     <copy file="${resource.dir}/ro/compounds.txt" todir="${dist.dir}/resource/ro" />
+    <copy file="${resource.dir}/ro/ro.ngp" todir="${dist.dir}/resource/ro" />
+
+    <copy file="${resource.dir}/sl/sl.ngp" todir="${dist.dir}/resource/sl" />
 
 	<copy file="${resource.dir}/sk/slovak.dict" todir="${dist.dir}/resource/sk" />
 	<copy file="${resource.dir}/sk/slovak.info" todir="${dist.dir}/resource/sk" />
@@ -542,6 +550,7 @@
 	<copy file="${resource.dir}/sk/slovak_synth.dict" todir="${dist.dir}/resource/sk" />
 	<copy file="${resource.dir}/sk/slovak_synth.info" todir="${dist.dir}/resource/sk" />
 	<copy file="${resource.dir}/sk/slovak_tags.txt" todir="${dist.dir}/resource/sk" />
+    <copy file="${resource.dir}/sk/sk.ngp" todir="${dist.dir}/resource/sk" />
 
 	<copy file="${resource.dir}/ml/malayalam.dict" todir="${dist.dir}/resource/ml" />
 	<copy file="${resource.dir}/ml/malayalam.info" todir="${dist.dir}/resource/ml" />
@@ -557,6 +566,7 @@
 	<copy file="${resource.dir}/ca/catalan.dict" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/catalan.info" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/README" todir="${dist.dir}/resource/ca" />
+    <copy file="${resource.dir}/ca/ca.ngp" todir="${dist.dir}/resource/ca" />
 
 	<copy file="${resource.dir}/xx/dummy.dict" tofile="${dist.dir}/resource/cs/czech.dict" />
 	<copy todir="${dist.dir}/rules">
