--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -17,13 +17,14 @@
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/segment-1.3.0.jar"/>
 	<classpathentry kind="lib" path="libs/morfologik-stemming-nodict-1.4.0.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-core-3.1.0.jar" sourcepath="C:/Documents and Settings/jpz6311whu/.m2/repository/org/apache/lucene/lucene-core/3.1.0/lucene-core-3.1.0-sources.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-queries-3.1.0.jar" sourcepath="C:/Documents and Settings/jpz6311whu/.m2/repository/org/apache/lucene/lucene-queries/3.1.0/lucene-queries-3.1.0-sources.jar"/>
-	<classpathentry kind="lib" path="libs/lucene-test-framework-3.1.0.jar" sourcepath="C:/Documents and Settings/jpz6311whu/.m2/repository/org/apache/lucene/lucene-test-framework/3.1.0/lucene-test-framework-3.1.0-sources.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-core-3.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-queries-3.1.0.jar"/>
+	<classpathentry kind="lib" path="libs/lucene-test-framework-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/junit-4.7.jar"/>
 	<classpathentry kind="lib" path="libs/jakarta-regexp-1.4.jar"/>
 	<classpathentry kind="lib" path="libs/tika-core-0.9.jar"/>
 	<classpathentry kind="lib" path="libs/ictclas4j-1.0.jar"/>
 	<classpathentry kind="lib" path="libs/CJFtransform_v1.0.1_bin.jar"/>
+	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
