--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -43,6 +43,13 @@ ext.lucene-queries.lib = ${ext.dir}/lucene-queries-3.1.0.jar
 ext.lucene-test-framework.lib = ${ext.dir}/lucene-test-framework-3.1.0.jar
 ext.jakarta-regex.lib = ${ext.dir}/jakarta-regexp-1.4.jar
 
+ictclas4j.lib = ictclas4j-1.0.jar
+ext.ictclas4j.lib = ${ext.dir}/ictclas4j-1.0.jar
+CJFtransform.lib = CJFtransform_v1.0.1_bin.jar
+ext.CJFtransform.lib = ${ext.dir}/CJFtransform_v1.0.1_bin.jar
+commons-validator.lib = commons-validator-1.3.1.jar
+ext.commons-validator.lib = ${ext.dir}/commons-validator-1.3.1.jar
+
 ext.junit.lib = ${ext.dir}/build/junit.jar
 
 # needed for cobertura (code-coverage tool):
