update build.xml, add Chinese language support

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -24,6 +24,11 @@
         <pathelement location="${ext.jakarta-regex.lib}" />
 		<pathelement location="${ext.segment.lib}" />
 		<!-- -->
+		<pathelement location="${ext.ictclas4j.lib}" />
+		<pathelement location="${ext.designgridlayout.lib}" />
+		<pathelement location="${ext.CJFtransform.lib}" />
+		<pathelement location="${ext.commons-validator.lib}" />
+		<!-- -->
 		<pathelement location="${ext.ooo.juh.lib}" />
 		<pathelement location="${ext.ooo.unoil.lib}" />
 		<pathelement location="${ext.ooo.ridl.lib}" />
@@ -287,11 +292,11 @@
 				<include name="*.properties" />
 			</fileset>
 		</copy>
-
+		
 		<jar jarfile="${dist.dir}/${final.name}.jar" basedir="${build.classes}" excludes="**/*.java">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.Main" />
-				<attribute name="Class-Path" value="./ ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib}" />
+				<attribute name="Class-Path" value="./ ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -300,7 +305,7 @@
 		<jar jarfile="${dist.dir}/${final.name.gui}.jar" basedir="${build.classes}" includes="de/danielnaber/languagetool/gui/*.class">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.gui.Main" />
-				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib}" />
+				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -368,7 +373,7 @@
 		<attribute name="RegistrationClassName" value="de.danielnaber.languagetool.openoffice.Main" />
 		<attribute name="Implementation-Version" value="${version}" />
 		<attribute name="Implementation-Date" value="${date}" />
-		<attribute name="Class-Path" value=". ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib}" />
+		<attribute name="Class-Path" value=". ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 		<attribute name="Uno-Type-Path" value="" />
 	</manifest>
 </jar>
@@ -440,6 +445,14 @@
 	<copy file="${ext.bliki.lib}" todir="${dist.dir}" />
 	<copy file="${ext.junit.lib}" todir="${dist.dir}" />
 	<copy file="${ext.tika.lib}" todir="${dist.dir}" />
+	
+	<copy file="${ext.ictclas4j.lib}" todir="${dist.dir}" />
+	<copy file="${ext.designgridlayout.lib}" todir="${dist.dir}" />
+	<copy file="${ext.CJFtransform.lib}" todir="${dist.dir}" />
+	<copy file="${ext.commons-validator.lib}" todir="${dist.dir}" />
+	<copy file="${ext.lucene-core.lib}" todir="${dist.dir}" />
+	<copy file="${ext.lucene-queries.lib}" todir="${dist.dir}" />
+	
 
 	<copy file="${src.scripts.dir}/testrules.sh" todir="${dist.dir}" />
 	<copy file="${src.scripts.dir}/testrules.bat" todir="${dist.dir}" />
@@ -568,6 +581,16 @@
 	<copy file="${resource.dir}/ca/README" todir="${dist.dir}/resource/ca" />
     <copy file="${resource.dir}/ca/ca.ngp" todir="${dist.dir}/resource/ca" />
 
+	<copy file="${resource.dir}/zh/coreDict.dct" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/BigramDict.dct" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/nr.dct" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/nr.ctx" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/tr.dct" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/tr.ctx" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/ns.dct" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/ns.ctx" todir="${dist.dir}/resource/zh" />
+	<copy file="${resource.dir}/zh/lexical.ctx" todir="${dist.dir}/resource/zh" />
+	
 	<copy file="${resource.dir}/xx/dummy.dict" tofile="${dist.dir}/resource/cs/czech.dict" />
 	<copy todir="${dist.dir}/rules">
 		<fileset dir="src/rules" excludes="CVS" />
