remove ext.designgridlayout.lib

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -25,7 +25,6 @@
 		<pathelement location="${ext.segment.lib}" />
 		<!-- -->
 		<pathelement location="${ext.ictclas4j.lib}" />
-		<pathelement location="${ext.designgridlayout.lib}" />
 		<pathelement location="${ext.CJFtransform.lib}" />
 		<pathelement location="${ext.commons-validator.lib}" />
 		<!-- -->
@@ -296,7 +295,7 @@
 		<jar jarfile="${dist.dir}/${final.name}.jar" basedir="${build.classes}" excludes="**/*.java">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.Main" />
-				<attribute name="Class-Path" value="./ ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+				<attribute name="Class-Path" value="./ ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -305,7 +304,7 @@
 		<jar jarfile="${dist.dir}/${final.name.gui}.jar" basedir="${build.classes}" includes="de/danielnaber/languagetool/gui/*.class">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.gui.Main" />
-				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -373,7 +372,7 @@
 		<attribute name="RegistrationClassName" value="de.danielnaber.languagetool.openoffice.Main" />
 		<attribute name="Implementation-Version" value="${version}" />
 		<attribute name="Implementation-Date" value="${date}" />
-		<attribute name="Class-Path" value=". ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${designgridlayout.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+		<attribute name="Class-Path" value=". ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 		<attribute name="Uno-Type-Path" value="" />
 	</manifest>
 </jar>
@@ -447,7 +446,6 @@
 	<copy file="${ext.tika.lib}" todir="${dist.dir}" />
 	
 	<copy file="${ext.ictclas4j.lib}" todir="${dist.dir}" />
-	<copy file="${ext.designgridlayout.lib}" todir="${dist.dir}" />
 	<copy file="${ext.CJFtransform.lib}" todir="${dist.dir}" />
 	<copy file="${ext.commons-validator.lib}" todir="${dist.dir}" />
 	<copy file="${ext.lucene-core.lib}" todir="${dist.dir}" />
