Add license information file for Chinese POS tagging tool: ictclas4j

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -432,6 +432,7 @@
 	<copy file="${ext.dir}/CPL.txt" tofile="${dist.dir}/junit-license.txt" />
 	<copy file="${ext.dir}/Apache-License.txt" tofile="${dist.dir}/jWordSplitter-license.txt" />
 	<copy file="${ext.dir}/segment-license.txt" tofile="${dist.dir}/segment-license.txt" />
+	<copy file="${ext.dir}/ictclas4j-license.txt" tofile="${dist.dir}/ictclas4j-license.txt" />
 
 	<filter filtersFile="build.properties" />
 	<copy file="${ext.dir}/README" tofile="${dist.dir}/README-license.txt" filtering="true" encoding="${encoding}" />
