[eo] - added disambiguator for Esperanto      - few updates to Esperanto grammar.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -475,7 +475,8 @@
 	<copy file="${resource.dir}/en/macro_expansions.txt" todir="${dist.dir}/resource/en" />
 
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
-    <copy file="${resource.dir}/eo/eo.ngp" todir="${dist.dir}/resource/eo" />
+	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/eo" />
+	<copy file="${resource.dir}/eo/eo.ngp" todir="${dist.dir}/resource/eo" />
 
 	<copy file="${resource.dir}/it/italian.dict" todir="${dist.dir}/resource/it" />
 	<copy file="${resource.dir}/it/italian.info" todir="${dist.dir}/resource/it" />
