Added support for Tagalog - thanks to Nathaniel Oco

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -474,6 +474,10 @@
 	<copy file="${resource.dir}/en/compounds.txt" todir="${dist.dir}/resource/en" />
 	<copy file="${resource.dir}/en/macro_expansions.txt" todir="${dist.dir}/resource/en" />
 
+	<copy file="${resource.dir}/tl/tagset.txt" todir="${dist.dir}/resource/tl" />
+	<copy file="${resource.dir}/tl/tagalog.dict" todir="${dist.dir}/resource/tl" />
+	<copy file="${resource.dir}/tl/tagalog.info" todir="${dist.dir}/resource/tl" />
+
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/eo.ngp" todir="${dist.dir}/resource/eo" />
