add README.txt with author and license information (from Nathaniel Oco)

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -477,6 +477,7 @@
 	<copy file="${resource.dir}/tl/tagset.txt" todir="${dist.dir}/resource/tl" />
 	<copy file="${resource.dir}/tl/tagalog.dict" todir="${dist.dir}/resource/tl" />
 	<copy file="${resource.dir}/tl/tagalog.info" todir="${dist.dir}/resource/tl" />
+	<copy file="${resource.dir}/tl/README.txt" todir="${dist.dir}/resource/tl" />
 
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/eo" />
