Added Tagalog and Asturian to auto-language detect.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -461,6 +461,8 @@
 	<copy file="${resource.dir}/api-output.dtd" todir="${dist.dir}/resource" />
 	<copy file="${resource.dir}/disambiguation.xsd" todir="${dist.dir}/resource" />
 	<copy file="${resource.dir}/segment.srx" todir="${dist.dir}/resource" />
+    
+    <copy file="${resource.dir}/ast/ast.ngp" todir="${dist.dir}/resource/ast" />
 
     <copy file="${resource.dir}/be/be.ngp" todir="${dist.dir}/resource/be" />
 
@@ -478,6 +480,7 @@
 	<copy file="${resource.dir}/tl/tagalog.dict" todir="${dist.dir}/resource/tl" />
 	<copy file="${resource.dir}/tl/tagalog.info" todir="${dist.dir}/resource/tl" />
 	<copy file="${resource.dir}/tl/README.txt" todir="${dist.dir}/resource/tl" />
+    <copy file="${resource.dir}/tl/tl.ngp" todir="${dist.dir}/resource/tl" />
 
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/eo" />
