--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -319,6 +319,15 @@
 			</manifest>
 		</jar>
 
+        <jar jarfile="${dist.dir}/RuleConverterGUI.jar" basedir="${build.classes}" includes="de/danielnaber/languagetool/dev/conversion/*.class">
+            <manifest>
+                <attribute name="Main-Class" value="de.danielnaber.languagetool.dev.conversion.gui.Main" />
+                <attribute name="Class-Path" value="./ ./rules ./resource ./${final.name}.jar" />
+                <attribute name="Implementation-Version" value="${version}" />
+                <attribute name="Implementation-Date" value="${date}" />
+            </manifest>
+        </jar>
+
 
 	</target>
 
