[eo] use the ManualTagger class to implement tagging of closed Esperanto words      rather than using a bunch of maps.  It makes the Esperanto tagger 80 lines      of code smaller.  It probably makes tagging slightly faster too since      checking on single map to find POS tag should be faster than checking      several sets sequentially.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -492,6 +492,7 @@
     <copy file="${resource.dir}/tl/tl.ngp" todir="${dist.dir}/resource/tl" />
 
 	<copy file="${resource.dir}/eo/etikedoj.txt" todir="${dist.dir}/resource/eo" />
+	<copy file="${resource.dir}/eo/manual-tagger.txt" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/eo" />
 	<copy file="${resource.dir}/eo/eo.ngp" todir="${dist.dir}/resource/eo" />
 
