--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -37,6 +37,8 @@ bliki.lib = bliki-3.0.3.jar
 ext.bliki.lib = ${ext.dir}/${bliki.lib}
 tika.lib = tika-core-0.9.jar
 ext.tika.lib = ${ext.dir}/${tika.lib}
+xmlsyntax.lib = xml-text-editor-0.0.3.jar
+ext.xmlsyntax.lib = ${ext.dir}/${xmlsyntax.lib}
 
 ext.lucene-core.lib = ${ext.dir}/lucene-core-3.1.0.jar
 ext.lucene-queries.lib = ${ext.dir}/lucene-queries-3.1.0.jar
