an Asturian tagger, by Xesús González Rato

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -611,7 +611,10 @@
 	<copy file="${resource.dir}/zh/ns.dct" todir="${dist.dir}/resource/zh" />
 	<copy file="${resource.dir}/zh/ns.ctx" todir="${dist.dir}/resource/zh" />
 	<copy file="${resource.dir}/zh/lexical.ctx" todir="${dist.dir}/resource/zh" />
-	
+
+	<copy file="${resource.dir}/ast/asturian.dict" todir="${dist.dir}/resource/ast" />
+	<copy file="${resource.dir}/ast/asturian.info" todir="${dist.dir}/resource/ast" />
+
 	<copy file="${resource.dir}/xx/dummy.dict" tofile="${dist.dir}/resource/cs/czech.dict" />
 	<copy todir="${dist.dir}/rules">
 		<fileset dir="src/rules" excludes="CVS" />
