--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -26,5 +26,6 @@
 	<classpathentry kind="lib" path="libs/ictclas4j-1.0.jar"/>
 	<classpathentry kind="lib" path="libs/CJFtransform_v1.0.1_bin.jar"/>
 	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="libs/xml-text-editor-0.0.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
