[br] - added POS tagger for Breton based on Breton dictionary from Apertium        project. Kudos to Fulup Jakez and Francis Tyers for their work on the        Breton dictionary, their help and the permission to use the dictionary.      - improved Breton word tokenizer.      - added a few more Breton grammar rules.  They can now use POS tags.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -509,6 +509,9 @@
 	<copy file="${resource.dir}/fr/multiwords.txt" todir="${dist.dir}/resource/fr" />
 	<copy file="${resource.dir}/fr/disambiguation.xml" todir="${dist.dir}/resource/fr" />
 
+	<copy file="${resource.dir}/br/breton.dict" todir="${dist.dir}/resource/br" />
+	<copy file="${resource.dir}/br/breton.info" todir="${dist.dir}/resource/br" />
+
 	<copy file="${resource.dir}/gl/galician.dict" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/galician.info" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/README" todir="${dist.dir}/resource/gl" />
