[br] Added Breton disambiguator.

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -511,6 +511,7 @@
 
 	<copy file="${resource.dir}/br/breton.dict" todir="${dist.dir}/resource/br" />
 	<copy file="${resource.dir}/br/breton.info" todir="${dist.dir}/resource/br" />
+	<copy file="${resource.dir}/eo/disambiguation.xml" todir="${dist.dir}/resource/br" />
 
 	<copy file="${resource.dir}/gl/galician.dict" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/galician.info" todir="${dist.dir}/resource/gl" />
