[gl] -Updated translation      -Added more lexical entries (SimpleReplaceRule files)      -Added bitext rules (for testing purposes)      -Added and updated grammar rules      -Added a few false friends      -Added one segmentation rule      -Updated entries in the dictionary (now includes enclitics)      -Modified the Galician tagger test to avoid delays testing the dictionary (temporarily)      -Added synthesizer      -Added disambiguator and a few rules

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -515,6 +515,10 @@
 
 	<copy file="${resource.dir}/gl/galician.dict" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/galician.info" todir="${dist.dir}/resource/gl" />
+	<copy file="${resource.dir}/gl/disambiguation.xml" todir="${dist.dir}/resource/gl" />
+	<copy file="${resource.dir}/gl/galician_tags.txt" todir="${dist.dir}/resource/gl" />
+	<copy file="${resource.dir}/gl/galician_synth.dict" todir="${dist.dir}/resource/gl" />
+	<copy file="${resource.dir}/gl/galician_synth.info" todir="${dist.dir}/resource/gl" />
 	<copy file="${resource.dir}/gl/README" todir="${dist.dir}/resource/gl" />
     <copy file="${resource.dir}/gl/gl.ngp" todir="${dist.dir}/resource/gl" />
 
