update to Morfologik 1.5.2, fixes a rare crash for German (at least)

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -24,8 +24,10 @@ resource.dir = ./src/resource
 
 ext.dir = ./libs
 ext.ooo.dir = ./libs/ooo
-stempelator.lib = morfologik-stemming-nodict-1.4.0.jar
-ext.stempelator.lib = ${ext.dir}/${stempelator.lib}
+morfologik.fsa.lib = morfologik-fsa-1.5.2.jar
+morfologik.stemming.lib = morfologik-stemming-1.5.2.jar
+ext.morfologik.fsa.lib = ${ext.dir}/${morfologik.fsa.lib}
+ext.morfologik.stemming.lib = ${ext.dir}/${morfologik.stemming.lib}
 ext.jwordsplitter.lib = ${ext.dir}/jWordSplitter.jar
 segment.lib = segment-1.3.0.jar
 ext.segment.lib = ${ext.dir}/${segment.lib}
