--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -13,7 +13,8 @@
 	<taskdef classpath="${ext.cobertura.lib}" resource="tasks.properties" />
 
 	<path id="common.classpath">
-		<pathelement location="${ext.stempelator.lib}" />
+		<pathelement location="${ext.morfologik.fsa.lib}" />
+		<pathelement location="${ext.morfologik.stemming.lib}" />
 		<pathelement location="${ext.jwordsplitter.lib}" />
         <pathelement location="${ext.logging.lib}" />
         <pathelement location="${ext.commons.lang.lib}" />
@@ -297,7 +298,7 @@
 		<jar jarfile="${dist.dir}/${final.name}.jar" basedir="${build.classes}" excludes="**/*.java">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.Main" />
-				<attribute name="Class-Path" value="./ ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+				<attribute name="Class-Path" value="./ ./rules ./resource ./${morfologik.fsa.lib} ./${morfologik.stemming.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -306,7 +307,7 @@
 		<jar jarfile="${dist.dir}/${final.name.gui}.jar" basedir="${build.classes}" includes="de/danielnaber/languagetool/gui/*.class">
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.gui.Main" />
-				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+				<attribute name="Class-Path" value="./LanguageTool.jar ./ ./resource ./rules ./${morfologik.fsa.lib} ./${morfologik.stemming.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
@@ -383,7 +384,7 @@
 		<attribute name="RegistrationClassName" value="de.danielnaber.languagetool.openoffice.Main" />
 		<attribute name="Implementation-Version" value="${version}" />
 		<attribute name="Implementation-Date" value="${date}" />
-		<attribute name="Class-Path" value=". ./rules ./resource ./${stempelator.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
+		<attribute name="Class-Path" value=". ./rules ./resource ./${morfologik.fsa.lib} ./${morfologik.stemming.lib} ./jWordSplitter.jar ./${segment.lib} ./${logging.lib} ./${tika.lib} ./${ictclas4j.lib} ./${CJFtransform.lib} ./${commons-validator.lib}" />
 		<attribute name="Uno-Type-Path" value="" />
 	</manifest>
 </jar>
@@ -436,10 +437,10 @@
 	</replace>
 	<replace file="${dist.dir}/README.txt" token="###DATE###" value="${date}">
 	</replace>
-	<replace file="${dist.dir}/README.txt" token="###stempelator.lib###" value="${stempelator.lib}">
+	<replace file="${dist.dir}/README.txt" token="###morfologik.lib###" value="${morfologik.fsa.lib}:${morfologik.stemming.lib}">
 	</replace>
 	<copy file="${ext.dir}/LGPL.txt" todir="${dist.dir}" />
-	<copy file="${ext.dir}/Morfologik-nodict-license.txt" tofile="${dist.dir}/Morfologik-license.txt" />
+	<copy file="${ext.dir}/Morfologik-license.txt" tofile="${dist.dir}/Morfologik-license.txt" />
 	<copy file="${ext.dir}/CPL.txt" tofile="${dist.dir}/junit-license.txt" />
 	<copy file="${ext.dir}/Apache-License.txt" tofile="${dist.dir}/jWordSplitter-license.txt" />
 	<copy file="${ext.dir}/segment-license.txt" tofile="${dist.dir}/segment-license.txt" />
@@ -448,7 +449,8 @@
 	<filter filtersFile="build.properties" />
 	<copy file="${ext.dir}/README" tofile="${dist.dir}/README-license.txt" filtering="true" encoding="${encoding}" />
 
-	<copy file="${ext.stempelator.lib}" todir="${dist.dir}" />
+	<copy file="${ext.morfologik.fsa.lib}" todir="${dist.dir}" />
+	<copy file="${ext.morfologik.stemming.lib}" todir="${dist.dir}" />
 	<copy file="${ext.jwordsplitter.lib}" todir="${dist.dir}" />
 	<copy file="${ext.segment.lib}" todir="${dist.dir}" />
 	<copy file="${ext.logging.lib}" todir="${dist.dir}" />
