[ru] Add hybrid disambiguator

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -574,6 +574,8 @@
 	<copy file="${resource.dir}/ru/tags_russian.txt" todir="${dist.dir}/resource/ru" />
 	<copy file="${resource.dir}/ru/compounds.txt" todir="${dist.dir}/resource/ru" />
 	<copy file="${resource.dir}/ru/disambiguation.xml" todir="${dist.dir}/resource/ru" />
+	<copy file="${resource.dir}/ru/multiwords.txt" todir="${dist.dir}/resource/ru" />
+
 
 	<copy file="${resource.dir}/ro/romanian.dict" todir="${dist.dir}/resource/ro" />
 	<copy file="${resource.dir}/ro/romanian.info" todir="${dist.dir}/resource/ro" />
