--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -16,7 +16,6 @@
 	<classpathentry kind="lib" path="libs/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="libs/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="libs/segment-1.3.0.jar"/>
-	<classpathentry kind="lib" path="libs/morfologik-stemming-nodict-1.4.0.jar"/>
 	<classpathentry kind="lib" path="libs/lucene-core-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/lucene-queries-3.1.0.jar"/>
 	<classpathentry kind="lib" path="libs/lucene-test-framework-3.1.0.jar"/>
@@ -27,5 +26,7 @@
 	<classpathentry kind="lib" path="libs/CJFtransform_v1.0.1_bin.jar"/>
 	<classpathentry kind="lib" path="libs/commons-validator-1.3.1.jar"/>
 	<classpathentry kind="lib" path="libs/xml-text-editor-0.0.3.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-fsa-1.5.2.jar"/>
+	<classpathentry kind="lib" path="libs/morfologik-stemming-1.5.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
