--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -317,7 +317,7 @@
 			<manifest>
 				<attribute name="Main-Class" value="de.danielnaber.languagetool.dev.conversion.RuleConverterMain" />
 				<attribute name="Class-Path" value="./ ./rules ./resource ./${final.name}.jar" />
-				<attribute name="Implemenation-Version" value="${version}" />
+				<attribute name="Implementation-Version" value="${version}" />
 				<attribute name="Implementation-Date" value="${date}" />
 			</manifest>
 		</jar>
