switch the Wikipedia extraction process for the new URL checking to Sweble (work in progress)

--- a/trunk/JLanguageTool/build.properties
+++ b/trunk/JLanguageTool/build.properties
@@ -23,6 +23,7 @@ resource.dir = ./src/resource
 
 ext.dir = ./libs
 ext.ooo.dir = ./libs/ooo
+
 morfologik.fsa.lib = morfologik-fsa-1.5.2.jar
 morfologik.stemming.lib = morfologik-stemming-1.5.2.jar
 ext.morfologik.fsa.lib = ${ext.dir}/${morfologik.fsa.lib}
@@ -45,6 +46,9 @@ ext.lucene-core.lib = ${ext.dir}/lucene-core-3.1.0.jar
 ext.lucene-queries.lib = ${ext.dir}/lucene-queries-3.1.0.jar
 ext.lucene-test-framework.lib = ${ext.dir}/lucene-test-framework-3.1.0.jar
 ext.jakarta-regex.lib = ${ext.dir}/jakarta-regexp-1.4.jar
+
+ext.sweble.engine = ${ext.dir}/swc-engine-1.0.1-SNAPSHOT-jar-with-dependencies.jar
+ext.sweble.parser = ${ext.dir}/swc-parser-lazy-1.0.1-SNAPSHOT-jar-with-dependencies.jar
 
 ictclas4j.lib = ictclas4j-1.0.jar
 ext.ictclas4j.lib = ${ext.dir}/ictclas4j-1.0.jar
