--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -40,6 +40,10 @@
 		<pathelement location="${ext.tika.lib}" />
         <!-- -->
         <pathelement location="${ext.xmlsyntax.lib}" />
+        <pathelement location="${ext.sweble.engine}" />
+        <pathelement location="${ext.sweble.parser}" />
+        <!-- TODO: needed for tests, does not really belong here: -->
+        <pathelement location="${src.java.dev.dir}" />
 	</path>
 
 	<path id="classpath">
