--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -179,6 +179,7 @@
 
 		<junit printsummary="true" failureproperty="tests.failed" showoutput="true" maxmemory="180M" fork="yes" forkmode="once" haltonfailure="${haltonfailure}">
 
+			<formatter type="xml" usefile="true" />
 			<formatter type="brief" usefile="false" />
 			<classpath refid="test.classpath" />
 
