--- a/trunk/JLanguageTool/.classpath
+++ b/trunk/JLanguageTool/.classpath
@@ -9,6 +9,7 @@
 	<classpathentry kind="lib" path="libs/ooo/jurt.jar"/>
 	<classpathentry kind="lib" path="libs/ooo/ridl.jar"/>
 	<classpathentry kind="lib" path="libs/ooo/unoil.jar"/>
+	<classpathentry kind="lib" path="libs/swc-engine-1.0.1-SNAPSHOT-jar-with-dependencies.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="libs/jWordSplitter.jar" sourcepath="/jWordSplitter"/>
