change alias for a new cert

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -708,7 +708,7 @@
 <jar compress="yes" basedir="${dist.dir}" destfile="${dist.dir}/web/rules.jar" includes="rules/**" />
 	
 <signjar keypass="blabla" keystore="./myalias.p12" 
-	storetype="pkcs12" storepass="blabla" alias="marcin miłkowski open source developer - id w unizeto technologies s.a.">
+	storetype="pkcs12" storepass="blabla" alias="8ac09659-7332-11e1-ba27-8c89a57cdeaa">
   <path>
     <fileset dir="${dist.dir}/web" includes="**/*.jar" />
   </path>
