[ca] major update, including many new rules and new tokenization (Jaume Ortolà i Font)

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -632,9 +632,12 @@
 	<copy file="${resource.dir}/km/disambiguation.xml" todir="${dist.dir}/resource/km" />
 	
 	<copy file="${resource.dir}/ca/catalan_synth.dict" todir="${dist.dir}/resource/ca" />
+	<copy file="${resource.dir}/ca/catalan_synth.info" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/catalan_tags.txt" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/catalan.dict" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/catalan.info" todir="${dist.dir}/resource/ca" />
+	<copy file="${resource.dir}/ca/multiwords.txt" todir="${dist.dir}/resource/ca" />
+	<copy file="${resource.dir}/ca/disambiguation.xml" todir="${dist.dir}/resource/ca" />
 	<copy file="${resource.dir}/ca/README" todir="${dist.dir}/resource/ca" />
     <copy file="${resource.dir}/ca/ca.ngp" todir="${dist.dir}/resource/ca" />
 
