document "javadoc" target; increase year

--- a/trunk/JLanguageTool/build.xml
+++ b/trunk/JLanguageTool/build.xml
@@ -360,7 +360,7 @@
 	<!-- ================================================================== -->
 	<!-- JAVADOC -->
 	<!-- ================================================================== -->
-	<target name="javadoc" depends="compile">
+	<target name="javadoc" depends="compile" description="Generate Javadoc API description">
 		<javadoc destdir="${dist.javadocs}" author="true" version="true" use="true" access="public" noqualifier="all" encoding="${encoding}" windowtitle="${javadoctitle}">
 
 			<classpath>
@@ -377,7 +377,7 @@
 			<doctitle>
 				<![CDATA[<h1>${javadoctitle}</h1>]]></doctitle>
 		<bottom>
-			<![CDATA[<i>Copyright &#169; 2005-2011 <a href="http://www.danielnaber.de" target="_top">Daniel Naber</a>
+			<![CDATA[<i>Copyright &#169; 2005-2012 <a href="http://www.danielnaber.de" target="_top">Daniel Naber</a>
 		</i>]]></bottom>
 	<link offline="true" href="http://java.sun.com/products/jdk/1.4/docs/api/" packagelistLoc="/tmp" />
 </javadoc>
